[Modify] 모임 게시글 상세페이지 댓글 리스트 로직 수정